--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -12,12 +12,20 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+curl:
+- '8'
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '19'
 docker_image:
 - quay.io/condaforge/linux-anvil-x86_64:alma9
+gmp:
+- '6'
+libffi:
+- '3.4'
+libiconv:
+- '1'
 perl:
 - 5.32.1
 target_platform:
