--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -14,10 +14,18 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+curl:
+- '8'
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '19'
+gmp:
+- '6'
+libffi:
+- '3.4'
+libiconv:
+- '1'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 perl:
