--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -10,10 +10,18 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+curl:
+- '8'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '15'
+gmp:
+- '6'
+libffi:
+- '3.4'
+libiconv:
+- '1'
 perl:
 - 5.32.1
 target_platform:
