--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -21,12 +21,15 @@ requirements:
     - pkg-config
     - curl
     - ghc-bootstrap
-    - if: not unix
+    - if: unix
       then:
+        - tar
+      else:
         - m2-bash
         - m2-coreutils
         - m2-diffutils
         - m2-grep
+        - m2-tar
         - m2-which
   host:
     - gmp
