--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -24,11 +24,13 @@ requirements:
     - xz-tools
     - if: unix
       then:
+        - file
         - tar
       else:
         - m2-bash
         - m2-coreutils
         - m2-diffutils
+        - m2-file
         - m2-grep
         - m2-tar
         - m2-which
