--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -32,6 +32,7 @@ requirements:
         - m2-coreutils
         - m2-diffutils
         - m2-file
+        - m2-gawk
         - m2-grep
         - m2-unzip
         - m2-which
