(fix) allow osx dynlink, set dead_strip for overlinking?

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -45,6 +45,8 @@ requirements:
       then:
         - libiconv
         - libffi
+  run:
+    # Minimal runtime dependencies - cabal is mostly statically linked
 
 tests:
   - script: |
