--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,7 +20,7 @@ requirements:
     - perl
     - pkg-config
     - curl
-    - ghc-bootstrap
+    - ghc-bootstrap ==9.10.1
     - if: unix
       then:
         - file
