--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -19,7 +19,7 @@ requirements:
     - perl
     - pkg-config
     - curl
-    - ghc-bootstrap ==9.12.2
+    - ghc-bootstrap
     - if: unix
       then:
         - file
@@ -43,7 +43,6 @@ requirements:
     - if: osx
       then:
         - libiconv
-        - libffi
 
 tests:
   - script: |
