--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,7 +1,8 @@
 c_stdlib:                       # [not osx]
   - sysroot                     # [linux]
   - m2w64-sysroot               # [not unix]
-c_stdlib_version:               # [not osx]
+c_stdlib_version:
+  - 11.0                        # [osx]
   - 2.34                        # [linux]
   - 12                          # [not unix]
 
