--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -37,7 +37,14 @@ requirements:
     - perl
     - pkg-config
     - curl
-    - ghc-bootstrap ==9.12.2 pl5321h7f65811_2
+    
+    - if: osx
+      then: ghc-bootstrap ==9.12.2 pl5321h7f65811_2
+    - if: linux
+      then: ghc-bootstrap ==9.12.2 pl5321hc1377c9_2
+    - if: not unix
+      then: ghc-bootstrap ==9.12.2 pl5321hf003a06_2
+      
     - if: unix
       then:
         - file
