--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -37,14 +37,7 @@ requirements:
     - perl
     - pkg-config
     - curl
-    
-    - if: osx
-      then: ghc-bootstrap ==9.12.2 pl5321h7f65811_4
-    - if: linux
-      then: ghc-bootstrap ==9.12.2 pl5321hc1377c9_4
-    - if: not unix
-      then: ghc-bootstrap ==9.12.2 pl5321hf003a06_4
-      
+    - ghc-bootstrap ==9.12.2 pl5321h7f65811_4
     - if: unix
       then:
         - file
