(fix) use latest ghc-bootstrap

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -37,7 +37,7 @@ requirements:
     - perl
     - pkg-config
     - curl
-    - ghc-bootstrap ==9.12.2 pl5321h7f65811_4
+    - ghc-bootstrap
     - if: unix
       then:
         - file
